opam-version: "1.2"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Anil Madhavapeddy <anil@recoil.org>"]
homepage: "https://github.com/avsm/ocaml-version"
doc: "http://docs.mirage.io/ocaml-version"
license: "ISC"
dev-repo: "https://github.com/avsm/ocaml-version.git"
bug-reports: "https://github.com/avsm/ocaml-version/issues"
tags: ["org:ocamllabs"]
available: [ ocaml-version >= "4.02.3"]
depends: [
  "jbuilder" {build & >="1.0+beta10"}
]
build: [
  ["jbuilder" "subst" "-p" name "--name" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
