opam-version: "1.2"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: ["Anil Madhavapeddy <anil@recoil.org>"]
homepage: "https://github.com/avsm/ocaml-version"
doc: "http://docs.mirage.io/ocaml-version"
license: "ISC"
dev-repo: "https://github.com/avsm/ocaml-version.git"
bug-reports: "https://github.com/avsm/ocaml-version/issues"
tags: ["org:ocamllabs"]
depends: [
  "dune" {build}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
available: [ ocaml-version >= "4.03.0"]
